--- a/Projekt/Teachify/Teachify/Teacher/AddExercise/Screen1/SubjectCollectionView/AddSubjectReuseableCell.xib
+++ b/Projekt/Teachify/Teachify/Teacher/AddExercise/Screen1/SubjectCollectionView/AddSubjectReuseableCell.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SubjectCollectionViewCell" id="gTV-IL-0wX" customClass="SubjectCollectionViewCell" customModule="Teachify" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddSubjectReuseableCell" id="gTV-IL-0wX" userLabel="AddSubjectReuseableCell" customClass="AddSubjectReuseableCell" customModule="Teachify" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="396" height="158"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -20,13 +20,13 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calculator" translatesAutoresizingMaskIntoConstraints="NO" id="Tgw-Lb-IMB">
-                        <rect key="frame" x="317" y="31" width="90" height="96"/>
+                        <rect key="frame" x="336" y="31" width="90" height="96"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Tgw-Lb-IMB" secondAttribute="height" multiplier="31:33" id="l8W-fE-zIF"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Math" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QU6-wp-Cdk">
-                        <rect key="frame" x="8" y="8" width="263" height="46"/>
+                        <rect key="frame" x="8" y="8" width="320" height="46"/>
                         <fontDescription key="fontDescription" type="system" pointSize="38"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -36,14 +36,18 @@
             <color key="backgroundColor" red="0.28235294117647058" green="0.50196078431372548" blue="0.75686274509803919" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Tgw-Lb-IMB" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="00g-Lg-9XO"/>
-                <constraint firstItem="Tgw-Lb-IMB" firstAttribute="leading" secondItem="QU6-wp-Cdk" secondAttribute="trailing" constant="46" id="0BQ-9D-XzJ"/>
+                <constraint firstItem="Tgw-Lb-IMB" firstAttribute="leading" secondItem="QU6-wp-Cdk" secondAttribute="trailing" constant="8" id="0BQ-9D-XzJ"/>
                 <constraint firstItem="QU6-wp-Cdk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="8" id="75c-fG-2XJ"/>
                 <constraint firstItem="Tgw-Lb-IMB" firstAttribute="width" secondItem="Tgw-Lb-IMB" secondAttribute="height" multiplier="31:33" id="FL3-9P-Eyq"/>
-                <constraint firstAttribute="trailing" secondItem="Tgw-Lb-IMB" secondAttribute="trailing" constant="-11" id="JW6-LH-1fJ"/>
+                <constraint firstAttribute="trailing" secondItem="Tgw-Lb-IMB" secondAttribute="trailing" constant="-30" id="JW6-LH-1fJ"/>
                 <constraint firstItem="QU6-wp-Cdk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="uIF-BI-gNG"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="396" height="158"/>
+            <connections>
+                <outlet property="subjectIcon" destination="Tgw-Lb-IMB" id="KY2-zD-fsu"/>
+                <outlet property="subjectName" destination="QU6-wp-Cdk" id="dHY-8s-PV2"/>
+            </connections>
             <point key="canvasLocation" x="75" y="14"/>
         </collectionViewCell>
     </objects>
